snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2-all.jar.md5
e7ffcf491e5d7a09cfef7d465546503f